examples/test/testpolicy14141.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14141
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key0: value18
      key44: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value44
          key0: value29
          key7: value9
      podSelector:
        matchLabels:
          key32: value4
          key30: value4
          key13: value36
